--- a/elements/webgl-editor/webgl-editor.css
+++ b/elements/webgl-editor/webgl-editor.css
@@ -16,5 +16,5 @@ editor-attribute-view
   width: var(--attribute-view-width);
   height: 100%;
   float: right;
-  background: #333333;
+  background: #f5f5f5;
 }
